Bug 176: Style matching contents column, so that overflow text is shown with ellipsis by default and reveled on hover

--- a/style/default.css
+++ b/style/default.css
@@ -410,6 +410,19 @@
     background-color: #f66;
   }
 
+  td.matching_contents {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
+    white-space: nowrap;
+  }
+
+  td.matching_contents:hover {
+    overflow: visible;
+    white-space: normal;
+  }
+
   ul#HeaderMenu {
     list-style-type: none;
     margin: 0;
